@@ -502,4 +502,6 @@
 	* Incorporate patch "[2164503] nuttx-0.3.16 does not build for ARM with USB disabled"
 	* Reduced the amount of memory reserved for USB serial control requests.  It
 	  was unnecessarily large.
-	* Add LPC214x SPI1 driver to interface with MMC on mcu123.com board.
+	* Added LPC214x SPI1 driver to interface with MMC on mcu123.com board.
+	* Added a simple SPI-based MMC/SD block driver
+
